components/page-level/teamhub-dashboard/tabs/payments/payment-table/head.module.css
.cell {
  grid-column: span 1 / span 1;
  color: var(--c-white-50);
  text-align: center;
}
.cellSpan2 {
  grid-column: span 2 / span 2;
  color: var(--c-white-50);
  text-align: center;
}
.cellSpan3 {
  grid-column: span 3 / span 3;
  color: var(--c-white-50);
}

